--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -11,7 +11,7 @@
 <body style="background-color: rgb(247, 245, 246);">
 	<div class="container">
 		<!-- <img src="images/eupan_logo.svg" alt="logo"> -->
-		<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="nanbar navbar-inverse navbar-fixed-top">
 			
 			<div class="container-fluid">
 				<div class="navbar-header">
