--- a/templates/about.html
+++ b/templates/about.html
@@ -46,8 +46,8 @@
           <strong>Instructor</strong><br>
           <a href="https://cbb.sjtu.edu.cn/~mywu/">Maoying Wu</a>
           <br><br>
-          If there is any problem with this website, 
-          please contact <a href="mailto:pjz2001@163.com">us</a>.</td>
+          The source code of this project can be found on <a href="https://github.com/peipp410/MiniFIFA">Github</a>. <br>
+          If there is any problem with this website, please contact <a href="mailto:pjz2001@163.com">us</a>.</td>
         <td width="30%"><br>
             <strong>What we are doing?</strong><br>
             {% load static %}
