--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 <div id="particles-js">
 	<link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.css">
-	<body background="/static/img/pic_homePage.jpg" style=" background-repeat:no-repeat ;background-size:100% 100%;
+	<body background="/static/img/pic_homePage.png" style=" background-repeat:no-repeat ;background-size:100% 100%;
 	background-attachment: initial;">
 		<div class="container">
 			<div class="nanbar navbar-inverse navbar-fixed-top">
