--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -35,8 +35,8 @@
          <p data-anchor-id="69g1"><strong>As a FIFA player, do you want to search for your players or supported team easily? </strong></p>
          <p data-anchor-id="69g1"><strong>Do you want to know the possible capability of new players and their potential?</strong></p>
          <p data-anchor-id="69g1"><strong>Do you have your unique and favourite team just for a few seconds?</strong></p>
-         <h3>Just choose FIFA dataset!</h3>
-        <p data-anchor-id="y86t">FIFA dataset is an advanced database serving all FIFA players. Based on current SoFIFA, we further simplify unnecessary information redundancy and add visual elements like charts. Most importantly, we initiatively introduce the evaluation and management functions, which enable users to finish evaluation and arrangement just after inputting options.</p>
+         <h3>Just choose MiniFIFA!</h3>
+        <p data-anchor-id="y86t">MiniFIFA is an advanced database serving all FIFA players. Based on current SoFIFA, we further simplify unnecessary information redundancy and add visual elements like charts. Most importantly, we initiatively introduce the evaluation and management functions, which enable users to finish evaluation and arrangement just after inputting options.</p>
         <p data-anchor-id="9il9">We designed following pages:</p>
 
         <p data-anchor-id="d5mo"><strong>(1) Home</strong></p>
